updated conf proceedings

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -108,7 +108,7 @@ Greenhow, C. M., Galvin, S., & **Staudt Willet**, K. B. (in press). Research met
 
 ## Peer-Reviewed Conference Proceedings (14)
 
-Krutka, D. G., Heath, M. K., & **Staudt Willet**, K. B. (2020, April). *Foregrounding critical technoethics in technology and teacher education: A workshop for pedagogical action* [Roundtable session canceled]. Society for Information Technology & Teacher Education (SITE) International Conference 2020, New Orleans, LA.
+Krutka, D. G., Heath, M. K., & **Staudt Willet**, K. B. (2020, April). *Foregrounding critical technoethics in technology and teacher education: A workshop for pedagogical action* Paper to be presented at the Society for Information Technology & Teacher Education (SITE) International Conference 2020, New Orleans, LA.
 
 **Staudt Willet**, K. B. (2020, April). *Early-career educators’ experiences with social media during induction*. Paper to be presented at the Society for Information Technology & Teacher Education (SITE) International Conference 2020, New Orleans, LA. 
 
@@ -336,8 +336,8 @@ InterVarsity Christian Fellowship/USA \hfill United States
 * \* Supervised 8 project leads
 * \* Hosted and directed 5 think tank gatherings (Atlanta, Austin, San Francisco)
 
-**Area Director** \hfill 2009-2014  
-InterVarsity Christian Fellowship/USA \hfill South Central Pennsylvania
+**Area Director**, South Central Pennsylvania \hfill 2009-2014  
+InterVarsity Christian Fellowship/USA
 
 * \* Supervised 17 different staff
 * \* Directed 11 conferences for undergraduate students from 7 colleges
