updated dissertation title

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -44,7 +44,7 @@ urlcolor: blue
 
 **PhD**, Educational Psychology & Educational Technology \hfill Expected 2020
 
-  * \* Dissertation: *Into the edu-verse: Early-career educators seeking induction support on social media*
+  * \* Dissertation: *Into the edu-verse: New teachers’ agency in self-directed learning with social media*
   * \* Committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
   * \* Defended proposal: November 26, 2019
   
@@ -301,10 +301,10 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 # Service
 
-## Journal Article Reviews (4)
+## Journal Article Reviews (5)
 
+\* *American Journal of Education* (2) \hfill 2019-2020  
 \* *Internet and Higher Education* (2) \hfill 2019  
-\* *American Journal of Education*, with Dr. Jeffrey Carpenter, faculty reviewer \hfill 2019  
 \* *Learning, Media and Technology*, with Dr. Christine Greenhow, faculty reviewer \hfill 2016
 
 ## Service in Professional Organizations
