updated BIG position

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -352,12 +352,12 @@ Department of Counseling, Educational Psychology, & Special Education
 
 * \* Taught courses at Master's and Undergraduate levels
 
-**Operations Manager** \hfill 2020-present  
-Black in Gaming \hfill Phoenix AZ  
-http://www.blackingames.com/
+**Executive Coach** \hfill 2020-present  
+Black in Gaming \hfill United States 
+http://www.blackingaming.com/
 
-* \* Trained and coached Founder/Chairman on organizational leadership
-* \* Designed and implemented strategy for organizational culture and collaboration for remote and asynchronous work
+* \* Trained and mentored members of the core leadership team
+* \* Designed and implemented strategy for organizational culture and collaboration through remote and asynchronous work
 
 **Course Writer** \hfill 2019  
 Concordia University, College of Education \hfill Portland OR  
