added Early Career Symposium

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -420,6 +420,9 @@ Bucknell University, College of Arts & Sciences \hfill Lewisburg PA
 
 # Further Training
 
+**Early Career Symposium** \hfill 2020  
+Association for Educational Communications & Technology (AECT) \hfill Virtual Conference
+
 **Reproducible Research** \hfill 2020  
 Course Certificate – Johns Hopkins University \hfill Coursera.org
 
